[package]
name = "eq-maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.20", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
resvg = "0.23.0"
tiny-skia = "^0.6"
tokio = { version = "1.21.0", features = ["full"] }
usvg = "0.23.0"
